# mesh-reconstructor

./: CMakeLists.txt  README.md
data/: test.off  test.xyz  test_wo_nor.xyz
include/: Export.h  IO.hpp  Point.hpp  RPD.h
include/RPD/: RPD - 副本.h  RPD.hpp  RPDCell.hpp  RPDPlane.hpp  RPDPoint.hpp
src/: OffsetFunc  OffsetPoints  main.cpp  ori_OffsetFunc  test_main.cpp
src/RPD/: RPDCell.cpp  RPDDisk.cpp  RPDPlane.cpp  RPDPoint.cpp  RPDRecon.cpp
